==> ahmsville/Magnetic_rotary_encoding/Arduino/Magnetic_rotary_encoding/MagRotaryEncoding.cpp <==
#include "MagRotaryEncoding.h"

int MagRotaryEncoder::processExINT(int encstate)
{
	if (startposition == 0)
	{
		startposition = encstate;
		return 0;
	}
	if (startposition != encstate)
	{
		rotationrate = millis() - timetracker; // rotation step rate
		outstr = "\n";

		if (encstate == 1 && processS1_N_INT)
		{
			if (flagState != 0) //encoder reversed interpolate between states
			{
				if (passSynctest(encstate)) {
					processCOUNT(startposition, encstate);
				}
				else {
					processCOUNT(startposition, flagState);
					processCOUNT(flagState, encstate);
				}
			}

			else {
				processCOUNT(startposition, encstate);
			}
			processPULSE(encstate);

			timetracker = millis();
			startposition = encstate;
		}
		else if (encstate == 3 && processS1_S_INT)
		{
			if (flagState != 0) //encoder reversed interpolate between states
			{
				if (passSynctest(encstate)) {
					processCOUNT(startposition, encstate);
				}
				else {
					processCOUNT(startposition, flagState);
					processCOUNT(flagState, encstate);
				}
			}
			else {
				processCOUNT(startposition, encstate);
			}
			processPULSE(encstate);

			timetracker = millis();
			startposition = encstate;
		}
		else if (encstate == 2 && processS2_S_INT)
		{
			if (flagState != 0) //encoder reversed interpolate between states
			{
				if (passSynctest(encstate)) {
					processCOUNT(startposition, encstate);
				}
				else {
					processCOUNT(startposition, flagState);
					processCOUNT(flagState, encstate);
				}
			}
			else {
				processCOUNT(startposition, encstate);
			}
			processPULSE(encstate);

			timetracker = millis();
			startposition = encstate;
		}
		else if (encstate == 4 && processS2_N_INT)
		{
			if (flagState != 0) //encoder reversed interpolate between states
			{
				if (passSynctest(encstate)) {
					processCOUNT(startposition, encstate);
				}
				else {
					processCOUNT(startposition, flagState);
					processCOUNT(flagState, encstate);
				}
			}
			else {
				processCOUNT(startposition, encstate);
			}
			processPULSE(encstate);

			timetracker = millis();
			startposition = encstate;
		}
		if (startposition == encstate && count == 0)
		{
			if (encoderResolution > 0)
			{
				outstr = "missed step...........";
				Serial.println(outstr);
				//count = 10000;
				//inSync = false;
			}
			
		}
		

	}
	
	return startposition;
}

int MagRotaryEncoder::get_bound(int sensor_num) // calculate ideal bound value for hall sensor
{
	use_extended_resolution = false;
	int loops = 2000;
	int minval = 10000;
	int maxval = 0;
	int ret = 0;
	Serial.print("reading ADC");

	if (useInterrupt)
	{
		Serial.print("\n");
		Serial.print("waiting for interrupt - rotate the knob...\n");
		while (digitalRead(get_sensorINTpin(sensor_num)) == 0) // wait for interrupt
		{
			/* code */
		}
		for (size_t i = 0; i < 10000; i++)
		{
			Serial.print("interrupt detected, reading sensor values\n");
			while (digitalRead(get_sensorINTpin(sensor_num)) == 1) // get upper and lower limit of center region for analog and digital detection
			{

				ret = get_sensorValue(sensor_num);
				if (ret < minval)
				{
					minval = ret;
				}
				if (ret > maxval)
				{
					maxval = ret;
				}
				if (i % (loops / 100) == 0)
				{
					printf(".");
				}
			}
		}
		use_extended_resolution = false;
	}
	else
	{
		for (size_t i = 0; i < loops; i++)
		{

			ret = get_sensorValue(sensor_num); // get upper and lower noise limits for abalog only detection
			if (ret < minval)
			{
				minval = ret;
			}
			if (ret > maxval)
			{
				maxval = ret;
			}
			delay(10);
			if (i % (loops / 10) == 0)
			{
				Serial.print(".");
			}
		}
		use_extended_resolution = true;
	}
	Serial.print("\n");
	Serial.print("maximum value >> | minimum value >> ");
	Serial.print(maxval);
	Serial.print("\t");
	Serial.println(minval);
	int idealbound = maxval - minval;
	Serial.print("ideal bound >>");
	Serial.println(idealbound);

	return idealbound;
}

void MagRotaryEncoder::haptics(int state) {   //viberation feedback function
	if (state == 1) {
		analogWrite(haptics_pin, haptics_strength);
		haptics_ontime = millis();
		haptics_state = 1;
	}
	else {
		haptics_offtime = millis();
		if (((haptics_offtime - haptics_ontime) >= haptics_duration) && haptics_state == 1) {
			analogWrite(haptics_pin, 0);
			haptics_state = 0;
		}

	}
	/*
	analogWrite(haptics_pin, haptics_strength);
	delay(haptics_duration);
	analogWrite(haptics_pin, 0);
	*/
}
