==> ahmsville/Magnetic_rotary_encoding/Magnetic Encoder Servo Project/Code/MagRotaryEncoding.cpp <==
#include "MagRotaryEncoding.h"
#include <iostream>
#define RISING 0x08
#define FALLING 0x04

int MagRotaryEncoder::processExINT(int encstate)
{
	if (startposition == 0)
	{
		startposition = encstate;
		return 0;
	}
	if (startposition != encstate)
	{
		rotationrate = (time_us_64() / 1000) - timetracker; // rotation step rate

		if (encstate == 1 && processS1_N_INT)
		{
			if (flagState != 0) // encoder reversed interpolate between states
			{
				if (passSynctest(encstate))
				{
					processCOUNT(startposition, encstate);
				}
				else
				{
					processCOUNT(startposition, flagState);
					processCOUNT(flagState, encstate);
				}
			}

			else
			{
				processCOUNT(startposition, encstate);
			}
			processPULSE(encstate);

			timetracker = (time_us_64() / 1000);
			startposition = encstate;
		}
		else if (encstate == 3 && processS1_S_INT)
		{
			if (flagState != 0) // encoder reversed interpolate between states
			{
				if (passSynctest(encstate))
				{
					processCOUNT(startposition, encstate);
				}
				else
				{
					processCOUNT(startposition, flagState);
					processCOUNT(flagState, encstate);
				}
			}
			else
			{
				processCOUNT(startposition, encstate);
			}
			processPULSE(encstate);

			timetracker = (time_us_64() / 1000);
			startposition = encstate;
		}
		else if (encstate == 2 && processS2_S_INT)
		{
			if (flagState != 0) // encoder reversed interpolate between states
			{
				if (passSynctest(encstate))
				{
					processCOUNT(startposition, encstate);
				}
				else
				{
					processCOUNT(startposition, flagState);
					processCOUNT(flagState, encstate);
				}
			}
			else
			{
				processCOUNT(startposition, encstate);
			}
			processPULSE(encstate);

			timetracker = (time_us_64() / 1000);
			startposition = encstate;
		}
		else if (encstate == 4 && processS2_N_INT)
		{
			if (flagState != 0) // encoder reversed interpolate between states
			{
				if (passSynctest(encstate))
				{
					processCOUNT(startposition, encstate);
				}
				else
				{
					processCOUNT(startposition, flagState);
					processCOUNT(flagState, encstate);
				}
			}
			else
			{
				processCOUNT(startposition, encstate);
			}
			processPULSE(encstate);

			timetracker = (time_us_64() / 1000);
			startposition = encstate;
		}
		if (startposition == encstate && count == 0)
		{
			if (encoderResolution > 0)
			{
				printf("missed step\n");
				// count = 10000;
				// inSync = false;
			}
		}
	}

	return startposition;
}

int MagRotaryEncoder::get_bound(int sensor_num) // calculate ideal bound value for hall sensor
{
	use_extended_resolution = false;
	int loops = 2000;
	int minval = 10000;
	int maxval = 0;
	int ret = 0;
	printf("reading ADC");

	if (useInterrupt)
	{
		printf("\n");
		printf("waiting for interrupt - rotate the knob...\n");
		while (gpio_get(get_sensorINTpin(sensor_num)) == 0) // wait for interrupt
		{
			/* code */
		}
		for (size_t i = 0; i < 10000; i++)
		{
			printf("interrupt detected, reading sensor values\n");
			while (gpio_get(get_sensorINTpin(sensor_num)) == 1) // get upper and lower limit of center region for analog and digital detection
			{

				ret = get_sensorValue(sensor_num);
				if (ret < minval)
				{
					minval = ret;
				}
				if (ret > maxval)
				{
					maxval = ret;
				}
				if (i % (loops / 100) == 0)
				{
					printf(".");
				}
			}
		}
		use_extended_resolution = false;
	}
	else
	{
		for (size_t i = 0; i < loops; i++)
		{

			ret = get_sensorValue(sensor_num); // get upper and lower noise limits for abalog only detection
			if (ret < minval)
			{
				minval = ret;
			}
			if (ret > maxval)
			{
				maxval = ret;
			}
			sleep_ms(10);
			if (i % (loops / 10) == 0)
			{
				printf(".");
			}
		}
		use_extended_resolution = true;
	}
	printf("\n");
	printf("maximum value >> %d minimum value >> %d  \n", maxval, minval);
	int idealbound = maxval - minval;
	printf("ideal bound >> %d \n", idealbound);

	return idealbound;
}

void MagRotaryEncoder::haptics(int state)
{ // viberation feedback function
	if (state == 1)
	{
		pwm_set_gpio_level(haptics_pin, haptics_strength);
		haptics_ontime = (time_us_64() / 1000);
		haptics_state = 1;
	}
	else
	{
		haptics_offtime = (time_us_64() / 1000);
		if (((haptics_offtime - haptics_ontime) >= haptics_duration) && haptics_state == 1)
		{
			pwm_set_gpio_level(haptics_pin, 0);
			haptics_state = 0;
		}
	}
	/*
	analogWrite(haptics_pin, haptics_strength);
	delay(haptics_duration);
	analogWrite(haptics_pin, 0);
	*/
}
